--- a/app/src/main/res/layout/activity_search_meals.xml
+++ b/app/src/main/res/layout/activity_search_meals.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rsb="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
+    android:background="@color/md_grey_300"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -22,13 +23,14 @@
             android:id="@+id/activity_search_meals"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="50dp"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             tools:context="ljuboandtedi.fridger.activties.SearchMealsActivity"
-            android:background="@drawable/background_pale">
+          >
 
             <LinearLayout
                 android:layout_weight="0.5"
