--- a/app/src/main/res/layout/activity_searchpic.xml
+++ b/app/src/main/res/layout/activity_searchpic.xml
@@ -23,11 +23,28 @@
             android:id="@+id/searchpic_NameOfTheRecipe"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="15sp"
             android:layout_gravity="bottom"
-            android:layout_alignParentBottom="true"
             android:lines="1"
-            android:textColor="@color/md_white_1000" />
+            android:typeface="serif"
+            android:textColor="@color/md_white_1000"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginBottom="37dp"
+            android:layout_marginLeft="15dp" />
+
+        <TextView
+            android:id="@+id/searchpic_creator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15sp"
+            android:typeface="serif"
+            android:lines="1"
+            android:layout_marginLeft="15dp"
+            android:layout_marginBottom="15dp"
+            android:textColor="@color/md_grey_400"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true" />
 
 
     </RelativeLayout>
