Profile and drawer styled with final colors Logo colors updated Colors fixed in colors.xml

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="lightBlue">#59C4E6</color>
+    <color name="darkBlue">#3B5998</color>
+    <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
