--- a/app/src/main/res/drawable/profile_confirm_button.xml
+++ b/app/src/main/res/drawable/profile_confirm_button.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="100dp" />
-    <solid android:color="@color/darkBlue"/>
+    <solid android:color="@color/lightBlue"/>
     <stroke
         android:width="3dip"
-        android:color="#ffffff" />
+        android:color="@color/black" />
     <padding
         android:bottom="4dp"
         android:left="4dp"
