--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
             android:gravity="center"
             android:orientation="vertical"
             tools:context="ljuboandtedi.fridger.activties.MainActivity"
-            android:background="@drawable/background_pale">
+            android:background="@drawable/background_pale"
+            android:weightSum="1">
 
             <Button
                 android:layout_width="wrap_content"
@@ -44,8 +45,8 @@
             <com.lorentzos.flingswipe.SwipeFlingAdapterView
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                android:layout_width="277dp"
-                android:layout_height="126dp"
+                android:layout_width="168dp"
+                android:layout_height="146dp"
                 android:id="@+id/frame"
                 app:rotation_degrees="16"
                 app:max_visible="4"
