--- a/app/src/main/res/layout/meal_row.xml
+++ b/app/src/main/res/layout/meal_row.xml
@@ -1,28 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_gravity="bottom"
+    android:layout_gravity="center"
 
-    android:layout_width="250dp"
-    android:layout_height="170dp">
+    android:layout_width="168dp"
+    android:layout_height="146dp">
 
     <View
-        android:id="@+id/item_swipe_left_indicator"
+        android:id="@+id/item_swipe_left_indicator1"
         android:alpha="0"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
+        android:layout_width="69dp"
+        android:layout_height="60dp"
         android:layout_margin="10dp"
         android:background="#A5F" />
 
-    <View
-        android:id="@+id/item_swipe_right_indicator"
-        android:alpha="0"
-        android:layout_width="20dp"
-        android:layout_height="20dp"
-        android:layout_margin="10dp"
-        android:layout_gravity="right"
-        android:background="#5AF" />
-<LinearLayout
+    <LinearLayout
     android:layout_width="match_parent"
     android:layout_gravity="center"
     android:layout_height="wrap_content">
@@ -40,13 +32,23 @@
 </LinearLayout>
 
     <ImageView
+
         android:layout_marginLeft="20dp"
         android:id="@+id/helloText"
         android:textSize="40sp"
         android:textColor="@android:color/white"
-        android:background="#E339"
+        android:background="#FF00"
         tools:text="hello_world"
         android:layout_width="match_parent"
-        android:layout_height="123dp" />
+        android:layout_height="match_parent" />
+
+    <View
+        android:id="@+id/item_swipe_right_indicator1"
+        android:alpha="0"
+        android:layout_width="69dp"
+        android:layout_height="72dp"
+        android:layout_margin="10dp"
+        android:layout_gravity="right"
+        android:background="#5AF" />
 
 </FrameLayout>
