--- a/app/src/main/res/layout/activity_your_ingredients.xml
+++ b/app/src/main/res/layout/activity_your_ingredients.xml
@@ -9,16 +9,17 @@
         android:id="@+id/frame_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/activity_your_ingredients"
             android:layout_width="match_parent"
             android:orientation="vertical"
             android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="30dp"
+            android:paddingLeft="50dp"
+            android:paddingRight="50dp"
+            android:paddingTop="35dp"
             tools:context="ljuboandtedi.fridger.activties.ShoppingListActivity"
             android:background="@drawable/background_list">
             <TextView
@@ -27,7 +28,8 @@
                 android:layout_alignParentTop="true"
                 android:gravity="center"
                 android:text="You need to buy these ingredients..."
-                android:textSize="30sp"/>
+                android:textSize="30sp"
+                android:textColor="@color/darkBlue"/>
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
