--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,71 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center"
+    android:orientation="vertical"
+    android:weightSum="10"
+    android:alpha="40"
+    android:background="@drawable/bbmainmenu2"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
-        android:id="@+id/frame_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+<TextView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textSize="30sp"
+    android:typeface="serif"
+    android:textColor="@color/com_facebook_blue"
+    android:gravity="center"
+    android:text="Check out some of the most popular meals for today"/>
 
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/activity_main"
+
+
+
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="3"-->
+            <!--android:typeface="serif"-->
+            <!--android:textColor="@color/com_facebook_blue"-->
+            <!--android:textSize="40sp"-->
+            <!--android:gravity="center"-->
+            <!--android:text="Some of our best MainDishes"-->
+            <!--android:id="@+id/textView2" />-->
+
+
+
+
+        <!--<TextView-->
+            <!--android:layout_width="0dp"-->
+            <!--android:layout_height="match_parent"-->
+            <!--android:layout_weight="3"-->
+            <!--android:typeface="serif"-->
+            <!--android:textSize="30sp"-->
+            <!--android:textColor="@color/com_facebook_blue"-->
+            <!--android:text="and some of our best Desserts"-->
+            <!--android:id="@+id/textView1" />-->
+
+        <com.lorentzos.flingswipe.SwipeFlingAdapterView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:gravity="center"
-            android:orientation="vertical"
-            tools:context="ljuboandtedi.fridger.activties.MainActivity"
-            android:background="@drawable/background_pale"
-            android:weightSum="1">
+            android:layout_height="0dp"
+            android:layout_gravity="center"
+            android:layout_weight="8.77"
+            android:id="@+id/frame2"
+            app:rotation_degrees="16"
+            app:max_visible="20"
+            app:min_adapter_stack="1" />
 
-            <Button
+
+    <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/main_SearchMenuButton"
-                android:text="Search"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/likeMeat"/>
+                android:typeface="serif"
+                android:textColor="@color/com_facebook_blue"
+                android:alpha="50"
+                android:layout_gravity="bottom|center"
+                android:background="@drawable/profile_confirm_button"
+                android:text="Checkout Our Fridger Search Beta"
+                android:id="@+id/intenting"/>
 
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Fav meals"
-                android:id="@+id/main_favMealsButton"/>
-
-            <com.lorentzos.flingswipe.SwipeFlingAdapterView
-                android:layout_width="236dp"
-                android:layout_height="210dp"
-                android:id="@+id/frame"
-                app:rotation_degrees="16"
-                app:max_visible="4"
-                app:min_adapter_stack="6"
-                android:layout_weight="0.31" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Shopping List"
-                android:id="@+id/main_shopListButton"/>
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="FridgeProducts"
-                android:id="@+id/main_fridgeButton"/>
-
-        </LinearLayout>
-    </FrameLayout>
-</RelativeLayout>
+</LinearLayout>
