--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -98,7 +98,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:textColor="@android:color/holo_green_dark"
+                    android:textColor="@color/lightBlue"
                     android:gravity="center_vertical"
                     android:paddingLeft="10dp"
                     android:text="Ingredients Details"
@@ -125,7 +125,7 @@
                     android:orientation="vertical"
                     android:layout_height="0dp">
                     <LinearLayout
-                        android:background="@color/md_blue_grey_300"
+                        android:background="@color/com_facebook_blue"
                         android:layout_width="match_parent"
                         android:orientation="horizontal"
                         android:layout_weight="1.9"
@@ -191,7 +191,7 @@
                             android:layout_weight="2"
                             android:layout_height="0dp">
                             <Button
-                                android:background="@color/md_blue_grey_300"
+                                android:background="@color/lightBlue"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:text="buy all"
@@ -199,7 +199,7 @@
                                 android:id="@+id/recipe_info_buyALlButton"
                                 android:layout_weight="1"/>
                             <Button
-                                android:background="@color/md_blue_grey_300"
+                                android:background="@color/lightBlue"
                                 android:layout_width="0dp"
                                 android:layout_height="match_parent"
                                 android:text="buy checked"
@@ -209,7 +209,7 @@
                         </LinearLayout>
 
                         <TextView
-                            android:background="@color/md_blue_grey_400"
+                            android:background="@color/com_facebook_blue"
                             android:layout_width="match_parent"
                             android:layout_weight="1.4"
                             android:id="@+id/recipe_info_continueExploring"
@@ -224,7 +224,7 @@
                             android:orientation="horizontal"
                             android:layout_height="0dp">
                             <TextView
-                                android:textColor="@color/md_red_50"
+                                android:textColor="@color/lightBlue"
                                 android:textSize="15sp"
                                 android:gravity="center"
                                 android:id="@+id/recipe_info_course1"
@@ -232,7 +232,7 @@
                                 android:layout_weight="1"
                                 android:layout_height="match_parent" />
                             <TextView
-                                android:textColor="@color/md_red_50"
+                                android:textColor="@color/lightBlue"
                                 android:gravity="center"
                                 android:id="@+id/recipe_info_course2"
                                 android:layout_width="0dp"
@@ -240,20 +240,27 @@
                                 android:layout_height="match_parent" />
 
                             <TextView
-                                android:textColor="@color/md_red_50"
+                                android:textColor="@color/lightBlue"
                                 android:gravity="center"
                                 android:id="@+id/recipe_info_course3"
                                 android:layout_width="0dp"
                                 android:layout_weight="1"
                                 android:layout_height="match_parent" />
 
+
+
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:orientation="vertical"
+                            android:layout_weight="4">
                             <android.support.v7.widget.RecyclerView
                                 android:layout_width="match_parent"
                                 android:layout_height="0dp"
                                 android:layout_weight="6"
                                 android:id="@+id/recycleListForRelatedMeals">
                             </android.support.v7.widget.RecyclerView>
-
                         </LinearLayout>
 
                     </LinearLayout>
@@ -269,7 +276,7 @@
                 android:layout_weight="0.2">
 
                 <Button
-                    android:background="@color/md_blue_grey_300"
+                    android:background="@color/com_facebook_blue"
                     android:id="@+id/recipe_info_viewNutritions"
                     android:layout_width="0dp"
                     android:text="All Nutritions"
@@ -277,7 +284,7 @@
                     android:layout_weight="1"/>
 
                 <Button
-                    android:background="@color/md_blue_grey_300"
+                    android:background="@color/com_facebook_blue"
 
                     android:id="@+id/recipe_info_viewDirections"
                     android:text="View Directions"
