--- a/app/src/main/res/layout/activity_search_meals.xml
+++ b/app/src/main/res/layout/activity_search_meals.xml
@@ -17,7 +17,7 @@
             android:id="@+id/activity_search_meals"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="10dp"
             android:orientation="vertical"
             android:paddingBottom="@dimen/activity_vertical_margin"
             android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -172,7 +172,7 @@
                         android:layout_width="0dp"
                         android:id="@+id/seachMeals_mealToSearch"
                         android:layout_weight="3"
-                        android:hint="What meal do you need?"
+                        android:hint="What do you need?"
                         android:layout_height="match_parent" />
                     <Button
                         android:layout_width="0dp"
