--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -1,5 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -14,8 +14,6 @@
         sothree:umanoPanelHeight="68dp"
         sothree:umanoParalaxOffset="100dp"
         sothree:umanoShadowHeight="4dp">
-
-        <!-- MAIN CONTENT -->
         <FrameLayout
             android:layout_below="@id/toolbar"
             android:id="@+id/frame_container"
@@ -26,7 +24,6 @@
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
-
                 <Button
                     android:id="@+id/recipe_info_ShowIngredients"
                     android:text="Show Ingredients info"
@@ -60,7 +57,6 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:id="@+id/recipe_info_TotalTime"/>
-
                 </LinearLayout>
                 <CheckBox
                     android:layout_width="wrap_content"
@@ -73,12 +69,8 @@
                     android:layout_width="match_parent"
                     android:scaleType="centerCrop">
                 </ImageView>
-
             </FrameLayout>
-
-
         </FrameLayout>
-        <!-- SLIDING LAYOUT -->
         <LinearLayout
             android:id="@+id/dragView"
             android:layout_width="match_parent"
@@ -103,7 +95,6 @@
                     android:paddingLeft="10dp"
                     android:text="Ingredients Details"
                     android:textSize="15sp" />
-
                 <Button
                     android:id="@+id/recipe_info_HideButton"
                     android:layout_width="wrap_content"
@@ -112,7 +103,6 @@
                     android:paddingRight="10dp"
                     android:text="Hide"
                     android:textSize="14sp" />
-
             </LinearLayout>
 
             <ScrollView
@@ -138,22 +128,11 @@
                             android:layout_width="0dp"
                             android:layout_weight="1"
                             android:layout_height="match_parent" />
-
-                        <!--<TextView-->
-                            <!--android:text=" ITB:"-->
-                            <!--android:gravity="center"-->
-
-                            <!--android:layout_width="0dp"-->
-                            <!--android:layout_weight="1"-->
-                            <!--android:layout_height="match_parent"-->
-                            <!--android:id="@+id/recipe_info_itemsToBeBought" />-->
-
                         <LinearLayout
                             android:layout_width="0dp"
                             android:orientation="vertical"
                             android:layout_weight="1"
                             android:layout_height="match_parent">
-
                             <TextView
                                 android:id="@+id/recipe_info_servingsForTheIngredients"
                                 android:layout_width="match_parent"
@@ -177,8 +156,6 @@
                         android:layout_weight="4"
                         android:orientation="vertical"
                         android:layout_height="0dp">
-
-
                         <android.support.v7.widget.RecyclerView
                             android:layout_width="match_parent"
                             android:layout_height="0dp"
@@ -247,8 +224,6 @@
                                 android:layout_weight="1"
                                 android:layout_height="match_parent" />
 
-
-
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -262,11 +237,8 @@
                                 android:id="@+id/recycleListForRelatedMeals">
                             </android.support.v7.widget.RecyclerView>
                         </LinearLayout>
-
                     </LinearLayout>
-
                 </LinearLayout>
-
             </ScrollView>
             <LinearLayout
                 android:layout_marginTop="10dp"
@@ -285,15 +257,12 @@
 
                 <Button
                     android:background="@color/com_facebook_blue"
-
                     android:id="@+id/recipe_info_viewDirections"
                     android:text="View Directions"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"/>
-
             </LinearLayout>
         </LinearLayout>
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
-
 </RelativeLayout>
