--- a/app/src/main/res/layout/activity_searchpic.xml
+++ b/app/src/main/res/layout/activity_searchpic.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/cardView"
     android:layout_width="fill_parent"
     android:layout_height="300dp">
-
     <RelativeLayout
         android:id="@+id/relativelayout"
         android:layout_width="match_parent"
@@ -38,7 +37,6 @@
             android:layout_alignParentStart="true"
             android:layout_marginBottom="37dp"
             android:layout_marginLeft="15dp" />
-
         <TextView
             android:id="@+id/searchpic_creator"
             android:layout_width="match_parent"
@@ -51,7 +49,5 @@
             android:textColor="@color/md_grey_400"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true" />
-
-
     </RelativeLayout>
 </android.support.v7.widget.CardView>
