--- a/app/src/main/res/layout/activity_searchpic.xml
+++ b/app/src/main/res/layout/activity_searchpic.xml
@@ -18,10 +18,10 @@
 
         <ImageView
             android:id="@+id/overlay"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="fitStart"
-            android:scaleX="2"
+            android:scaleX="3"
             />
 
         <TextView
