--- a/app/src/main/res/layout/activity_favourite_meals.xml
+++ b/app/src/main/res/layout/activity_favourite_meals.xml
@@ -19,8 +19,7 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
-            tools:context="ljuboandtedi.fridger.activties.FavouriteMealsActivity"
-            android:background="@drawable/background_pale">
-        </LinearLayout>
+            tools:context="ljuboandtedi.fridger.activties.FavouriteMealsActivity"/>
+
     </FrameLayout>
 </RelativeLayout>
