--- a/app/src/main/res/layout/activity_nutritions.xml
+++ b/app/src/main/res/layout/activity_nutritions.xml
@@ -7,19 +7,19 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:orientation="vertical"
-    android:background="@color/md_grey_100"
+    android:background="@color/darkBlue"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="ljuboandtedi.fridger.activties.NutritionsActivity">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
+        android:layout_marginBottom="20dp"
+        android:textSize="25sp"
         android:typeface="serif"
         android:gravity="center"
-        android:background="@color/md_blue_grey_50"
-        android:textColor="@color/md_black_1000"
-        android:text="Nutritions per 1 serving"/>
+        android:textColor="@color/lightBlue"
+        android:text="Nutritions per one serving"/>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
