--- a/app/src/main/res/layout/ingredient_row.xml
+++ b/app/src/main/res/layout/ingredient_row.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    android:layout_margin="6dp"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardElevation="4dp"
+    card_view:cardCornerRadius="3dp">
+
+<LinearLayout
     android:orientation="horizontal"
+    android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
         <CheckBox
@@ -24,3 +33,4 @@
             android:textColor="@color/md_black_1000"
             android:layout_height="match_parent" />
 </LinearLayout>
+</android.support.v7.widget.CardView>
