--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:elastic="http://schemas.android.com/tools"
     android:gravity="center"
     android:orientation="vertical"
     android:background="@color/black"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <it.michelelacorte.elasticprogressbar.ElasticDownloadView
+        android:id="@+id/elastic_download_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
     <TextView
         android:layout_width="match_parent"
