--- a/app/src/main/res/layout/ingredient_row.xml
+++ b/app/src/main/res/layout/ingredient_row.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="6dp"
-    card_view:cardUseCompatPadding="true"
-    card_view:cardElevation="4dp"
-    card_view:cardCornerRadius="3dp">
+    app:cardBackgroundColor="@color/transparent">
 
 <LinearLayout
     android:orientation="horizontal"
     android:gravity="center"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/line">
+
         <CheckBox
             android:gravity="top"
             android:layout_gravity="right"
@@ -28,9 +28,16 @@
             android:layout_weight="8.3"
             android:id="@+id/buyingIngredient"
             android:layout_width="0dp"
-            android:textSize="15sp"
-            android:lines="2"
-            android:textColor="@color/md_black_1000"
-            android:layout_height="match_parent" />
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:textScaleX="1.5"
+            android:lines="1"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            android:ellipsize="marquee"
+            android:marqueeRepeatLimit="-1"
+            android:scrollHorizontally="true"
+            android:layout_height="match_parent"
+            android:singleLine="true"/>
 </LinearLayout>
 </android.support.v7.widget.CardView>
