Widget working without update from app

--- a/app/src/main/res/layout/collection_widget.xml
+++ b/app/src/main/res/layout/collection_widget.xml
@@ -27,8 +27,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Shopping List"
+                android:textSize="20sp"
                 android:layout_gravity="center_vertical"
-                android:textColor="@color/lightBlue"
+                android:textColor="@color/white"
                 android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textStyle="bold"
                 android:paddingStart="@dimen/widget_header_padding"
@@ -40,8 +41,7 @@
             android:id="@+id/widget_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black"
-            android:alpha="80">
+            android:background="@color/black">
         </ListView>
     </LinearLayout>
 
