--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -1,8 +1,7 @@
-<RelativeLayout
+ <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <com.sothree.slidinguppanel.SlidingUpPanelLayout
         xmlns:sothree="http://schemas.android.com/apk/res-auto"
         android:id="@+id/sliding_layout"
@@ -19,7 +18,6 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
             <ImageView
                 android:id="@+id/recipe_info_Image"
                 android:layout_height="match_parent"
@@ -29,8 +27,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/recipe_info_FavouriteButton" />
+
             <FrameLayout
-                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
                 <Button
@@ -156,13 +154,12 @@
                         android:layout_weight="4"
                         android:orientation="vertical"
                         android:layout_height="0dp">
-                      <ListView
+                      <android.support.v7.widget.RecyclerView
                           android:layout_width="match_parent"
-                          android:layout_weight="3"
+                          android:layout_weight="2"
                           android:layout_height="0dp"
                           android:id="@+id/recycleListForIngredients">
-
-                      </ListView>
+                      </android.support.v7.widget.RecyclerView>
                         <LinearLayout
                             android:layout_width="match_parent"
                             android:orientation="horizontal"
