--- a/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
+++ b/app/src/main/res/layout/activity_recipe_info_slidingbar.xml
@@ -18,25 +18,37 @@
             android:layout_weight="1"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <ImageView
                 android:id="@+id/recipe_info_Image"
                 android:layout_height="match_parent"
                 android:layout_width="match_parent"
-                android:scaleType="centerCrop">  </ImageView>
-            <CheckBox
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:scaleType="centerCrop" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/gradient"/>
+
+            <ImageButton
+                android:layout_width="48dp"
+                android:layout_height="48dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/star_dark"
                 android:id="@+id/recipe_info_FavouriteButton" />
 
             <FrameLayout
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent">
-                <Button
+                <ImageButton
                     android:id="@+id/recipe_info_ShowIngredients"
-                    android:text="Show Ingredients info"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right"/>
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="right"
+                    android:background="@drawable/arrow_up"/>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:orientation="horizontal"
@@ -90,154 +102,18 @@
                     android:textColor="@color/lightBlue"
                     android:gravity="center_vertical"
                     android:paddingLeft="10dp"
-                    android:text="Ingredients Details"
+                    android:text="Recipe Details"
                     android:textSize="15sp" />
-                <Button
+
+                <ImageButton
                     android:id="@+id/recipe_info_HideButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp"
-                    android:text="Hide"
-                    android:textSize="14sp" />
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/arrow_down"/>
+
             </LinearLayout>
 
-            <ScrollView
-                android:nestedScrollingEnabled="true"
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical"
-                    android:layout_height="0dp">
-                    <LinearLayout
-                        android:background="@color/com_facebook_blue"
-                        android:layout_width="match_parent"
-                        android:orientation="horizontal"
-                        android:layout_weight="1.9"
-                        android:layout_marginBottom="10dp"
-                        android:layout_height="0dp">
-                        <TextView
-                            android:gravity="center"
-                            android:text="Ingredients"
-                            android:textColor="@color/md_black_1000"
-                            android:layout_width="0dp"
-                            android:layout_weight="1"
-                            android:layout_height="match_parent" />
-                        <LinearLayout
-                            android:layout_width="0dp"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:layout_height="match_parent">
-                            <TextView
-                                android:id="@+id/recipe_info_servingsForTheIngredients"
-                                android:layout_width="match_parent"
-                                android:layout_weight="1.3"
-                                android:gravity="center"
-                                android:layout_height="0dp" />
-
-                            <TextView
-                                android:text="Servings"
-                                android:textSize="8sp"
-                                android:gravity="center"
-                                android:layout_width="match_parent"
-                                android:layout_weight="1"
-                                android:layout_height="0dp"
-                                android:id="@+id/textView3" />
-                        </LinearLayout>
-
-                    </LinearLayout>
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_weight="4"
-                        android:orientation="vertical"
-                        android:layout_height="0dp">
-                      <android.support.v7.widget.RecyclerView
-                          android:layout_width="match_parent"
-                          android:layout_weight="2"
-                          android:layout_height="0dp"
-                          android:id="@+id/recycleListForIngredients">
-                      </android.support.v7.widget.RecyclerView>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:orientation="horizontal"
-                            android:layout_weight="2"
-                            android:layout_height="0dp">
-                            <Button
-                                android:background="@color/lightBlue"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:text="buy all"
-                                android:layout_marginBottom="10dp"
-                                android:id="@+id/recipe_info_buyALlButton"
-                                android:layout_weight="1"/>
-                            <Button
-                                android:background="@color/lightBlue"
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:text="buy checked"
-                                android:layout_marginBottom="10dp"
-                                android:id="@+id/recipe_info_buyCheckedButton"
-                                android:layout_weight="1"/>
-                        </LinearLayout>
-
-                        <TextView
-                            android:background="@color/com_facebook_blue"
-                            android:layout_width="match_parent"
-                            android:layout_weight="1.4"
-                            android:id="@+id/recipe_info_continueExploring"
-                            android:text="Continue Exploring"
-                            android:textColor="@color/md_blue_50"
-                            android:textSize="15sp"
-                            android:layout_height="0dp" />
-                        <LinearLayout
-                            android:background="@color/md_blue_grey_400"
-                            android:layout_width="match_parent"
-                            android:layout_weight="1.7"
-                            android:orientation="horizontal"
-                            android:layout_height="0dp">
-                            <TextView
-                                android:textColor="@color/lightBlue"
-                                android:textSize="15sp"
-                                android:gravity="center"
-                                android:id="@+id/recipe_info_course1"
-                                android:layout_width="0dp"
-                                android:layout_weight="1"
-                                android:layout_height="match_parent" />
-                            <TextView
-                                android:textColor="@color/lightBlue"
-                                android:gravity="center"
-                                android:id="@+id/recipe_info_course2"
-                                android:layout_width="0dp"
-                                android:layout_weight="1"
-                                android:layout_height="match_parent" />
-
-                            <TextView
-                                android:textColor="@color/lightBlue"
-                                android:gravity="center"
-                                android:id="@+id/recipe_info_course3"
-                                android:layout_width="0dp"
-                                android:layout_weight="1"
-                                android:layout_height="match_parent" />
-
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="0dp"
-                            android:orientation="vertical"
-                            android:layout_weight="4">
-                            <android.support.v7.widget.RecyclerView
-                                android:layout_width="match_parent"
-                                android:layout_height="0dp"
-                                android:layout_weight="6"
-                                android:id="@+id/recycleListForRelatedMeals">
-                            </android.support.v7.widget.RecyclerView>
-                        </LinearLayout>
-                    </LinearLayout>
-                </LinearLayout>
-            </ScrollView>
             <LinearLayout
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
@@ -249,7 +125,15 @@
                     android:background="@color/com_facebook_blue"
                     android:id="@+id/recipe_info_viewNutritions"
                     android:layout_width="0dp"
-                    android:text="All Nutritions"
+                    android:text="Nutrition Values"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
+
+                <Button
+                    android:background="@color/com_facebook_blue"
+                    android:id="@+id/recipe_info_showIngredientsActivity"
+                    android:layout_width="0dp"
+                    android:text="Ingredients"
                     android:layout_height="match_parent"
                     android:layout_weight="1"/>
 
@@ -261,6 +145,52 @@
                     android:layout_height="match_parent"
                     android:layout_weight="1"/>
             </LinearLayout>
+            <LinearLayout
+                android:background="@color/md_blue_grey_400"
+                android:layout_width="match_parent"
+                android:layout_weight="1.7"
+                android:orientation="horizontal"
+                android:layout_height="0dp">
+                <TextView
+                    android:background="@color/com_facebook_blue"
+                    android:layout_width="match_parent"
+                    android:layout_weight="1.4"
+                    android:id="@+id/recipe_info_continueExploring"
+                    android:text=""
+                    android:textColor="@color/md_blue_50"
+                    android:textSize="15sp"
+                    android:layout_height="match_parent" />
+                <Button
+                    android:textColor="@color/lightBlue"
+                    android:textSize="15sp"
+                    android:gravity="center"
+                    android:id="@+id/recipe_info_course1"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent" />
+                <Button
+                    android:textColor="@color/lightBlue"
+                    android:gravity="center"
+                    android:id="@+id/recipe_info_course2"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent" />
+
+                <Button
+                    android:textColor="@color/lightBlue"
+                    android:gravity="center"
+                    android:id="@+id/recipe_info_course3"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
+            <android.support.v7.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="6"
+                android:id="@+id/recycleListForRelatedMeals">
+            </android.support.v7.widget.RecyclerView>
         </LinearLayout>
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 </RelativeLayout>
