--- a/app/src/main/res/layout/ingredient_row.xml
+++ b/app/src/main/res/layout/ingredient_row.xml
@@ -28,8 +28,8 @@
             android:layout_weight="8.3"
             android:id="@+id/buyingIngredient"
             android:layout_width="0dp"
-            android:textSize="20sp"
-            android:textColor="@color/black"
+            android:textSize="14sp"
+            android:textColor="@color/com_facebook_blue"
             android:textScaleX="1.5"
             android:lines="1"
             android:focusable="true"
