--- a/app/src/main/res/layout/favouritemeal_recycle_row.xml
+++ b/app/src/main/res/layout/favouritemeal_recycle_row.xml
@@ -47,9 +47,10 @@
             android:textColor="@color/md_grey_400"
             android:layout_alignParentBottom="true"
             android:layout_alignParentStart="true" />
-        <Button
-            android:layout_width="match_parent"
+        <ImageButton
+            android:layout_width="wrap_content"
             android:gravity="center"
+            android:background="@drawable/star_light"
             android:id="@+id/favouritemeal_recycle_row_remover"
             android:textSize="20sp"
             android:layout_alignParentTop="true"
